snapshots/tests/class/environment/environment_comevents_class_load.snap
---
source: vb6parse/tests/class/environment.rs
expression: class
---
header:
  version:
    major: 1
    minor: 0
  properties:
    multi_use: MultiUse
    persistable: NotPersistable
    data_binding_behavior: None
    data_source_behavior: None
    mts_transaction_mode: NotAnMTSObject
  attributes:
    name: ComEvents
    global_name_space: Local
    creatable: "True"
    predeclared_id: "False"
    exposed: "True"
    description: ~
    ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: EndOfLineComment
        text: "' com events"
      - kind: Newline
        text: "\r\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: id
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: Identifier
                text: Index
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: LongKeyword
                text: Long
              - kind: Comma
                text: ","
              - kind: Whitespace
                text: " "
              - kind: ParamArrayKeyword
                text: ParamArray
              - kind: Whitespace
                text: " "
              - kind: Identifier
                text: a
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children: []
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
